Test based on jmx notifications